@@ -96,7 +96,7 @@ generate-maintainer-scripts: debian/apache2.preinst
 	done
 
 clean build build-arch build-indep binary binary-arch binary-indep: %:
-	dh $@ --parallel --with autotools_dev
+	dh $@ --parallel --with autotools_dev,systemd
 
 override_dh_auto_configure: generate-maintainer-scripts prebuild-checks support/suexec-custom.c
 	./configure --host=$(DEB_HOST_GNU_TYPE) --build=$(DEB_BUILD_GNU_TYPE) \
@@ -149,6 +149,12 @@ override_dh_fixperms-indep:
 override_dh_installinit:
 	dh_installinit --error-handler=true
 	dh_installinit --name apache-htcacheclean --noscripts
+
+override_dh_systemd_enable:
+	dh_systemd_enable -papache2 apache2.service
+	dh_systemd_enable -papache2 --name=apache2@ apache2@.service
+	dh_systemd_enable -papache2 --no-enable --name=apache-htcacheclean apache-htcacheclean.service
+	dh_systemd_enable -papache2 --no-enable --name=apache-htcacheclean@ apache-htcacheclean@.service
 
 override_dh_installdocs-indep:
 	# TODO: So, did anyone check convert_docs needs an update? ;)
